# pyorch-tcc

./: .gitignore  README.md
api/: .env  README.md  pyproject.toml
api/core/database/: __init__.py
api/src/: config.py  database.py  depends.py  main.py  models.py  worker.py
api/src/automations/: backend.py  models.py  repo.py  service.py  tasks.py  views.py
api/src/dashboard/: models.py  views.py
api/src/dashboard/services/: fetch_stats.py
api/src/logs/: models.py  views.py
api/src/logs/services/: fetch_automation_logs_from_file.py  fetch_logs_from_files.py
api/src/robots/: models.py  repo.py  views.py
api/src/task_execution/: task_events.py
api/src/tasks/: models.py  repo.py  service.py  views.py
api/src/workers/: views.py
api/tests/: conftest.py  database_test.py
api/upload/23/: main.py
web/: README.md  angular.json  package-lock.json  package-lock__.json  package.json  server.ts  tailwind.config.js
web/src/: index.html  main.server.ts  styles.css
web/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
web/src/app/core/models/: automation.model.ts  log.model.ts  stat.model.ts  task.model.ts  worker.model.ts
web/src/app/layout/header/: header.component.html
web/src/app/layout/sidebar/: sidebar.component.html  sidebar.component.ts
web/src/app/pages/automations/: automations.component.html  automations.component.ts
web/src/app/pages/home/: home.component.html  (+1 more)
web/src/environments/: environment.development.ts
web/src/styles/: fonts.css  theme-dark.css  theme-light.scss
(+21 files in other folders)
