[tool.poetry]
name = "pyorch"
version = "0.1.0"
description = ""
authors = ["Fernando Emerson <fernandoemerson00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
uvicorn = "^0.30.1"
python-decouple = "^3.8"
sqlalchemy = "^2.0.31"
sqlalchemyutils = "^0.0.7"
pytest = "^8.2.2"
pymysql = "^1.1.1"
celery = "^5.4.0"
redis = "^5.0.6"
cryptography = "^43.0.3"
python-multipart = "^0.0.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
